# gtk-plot-test

./: Cargo.toml  README.md  build.rs
resources/: resources.gresource.xml  window.ui
src/: main.rs  plot.rs  upower_device.rs  widget.rs  window.rs
