[package]
name = "gtk-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_1"] }
dbus = "0.9.7"
gtk = { version = "0.7.3", package = "gtk4", features = ["gnome_42"] }
log = "0.4.20"
once_cell = "1.19.0"
